aia-wellness-web-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellness-web
  namespace: nsp-mm-u-member 
spec:
  selector:
      matchLabels:
        app-name: wellness-web-uat
  replicas: 1
  template:
    metadata:
      labels:
        app-name: wellness-web-uat
    spec:
      containers:
        - name: wellness-web
          image: acrmm01seanshared01.azurecr.io/mm/wellness/web/wellness-web:20210618_v1
          ports:
            - containerPort: 4444
          env:
          - name: api.root.url
            value: https://uat.aia.com.mm/api/
          - name: jwt.route.token.path.web
            value: https://uat.aia.com.mm/api/auth/token
          - name: okta.oauth2.issuer
            value: https://aia.okta.com/oauth2/default
          - name: okta.oauth2.clientId
            value: "0oa23rzn2hfwdww0i4x7"
          - name: okta.oauth2.clientSecret
            value: "wc72k6CHrZ9a8DEjuAURR9gbKqQI7NM5xqCduGo0"
          - name: okta.oauth2.postLogoutRedirectUri
            value: http://uat.aia.com.mm/wellness            
---
apiVersion: v1
kind: Service
metadata:
  name: wellness-web-service
  namespace: nsp-mm-u-member
spec:
    type: ClusterIP
    ports:
    - port: 4444
    selector:
      app-name: wellness-web-uat
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
	name: wellness-ingress
	namespace: nsp-mm-u-member
	annotations:
		kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-path: /wellness
		nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /wellness/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
	spec:
    tls:
    - hosts:
      - uat.aia.com.mm
      secretName: ingress-nginx-tls-p-member
		rules:
    - host: uat.aia.com.mm
    - http:
        paths:
        -backend:
					  serviceName: wellness-web-service
					  servicePort: 4444
				  path: /wellness(/|$)(.*)
  status:
    loadBalancer:
      ingress:
      - ip: 10.217.144.76
